Cleanup GAttributeInfo usage
git-svn-id: https://svn.apache.org/repos/asf/geronimo/trunk@45159 13f79535-47bb-0310-9956-ffa450edef68